[tool.poetry]
name = "MPT"
version = "0.1.0"
description = ""
authors = ["Leandro Gabriel <lassisg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
dash = "^1.17.0"
dash-bootstrap-components = "^0.10.7"
numpy = "1.19.3"
pandas = "^1.1.4"
SQLAlchemy = "^1.3.20"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
